--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>
             A healthy diet helps to protect against malnutrition in all its forms, as well as noncommunicable diseases (NCDs), including diabetes, heart disease, stroke and cancer.
             Unhealthy diet and lack of physical activity are leading global risks to health.
-            Healthy dietary practices start early in life – breastfeeding fosters healthy growth and improves cognitive development, and may have longer term health benefits such as reducing the risk of becoming overweight or obese and developing NCDs later in life.
+            Healthy dietary practices start early the in life – breastfeeding fosters healthy growth and improves cognitive development, and may have longer term health benefits such as reducing the risk of becoming overweight or obese and developing NCDs later in life.
             </p>
         </div>
     </div>
