--- a/index.html
+++ b/index.html
@@ -34,6 +34,32 @@
             </p>
         </div>
     </div>
+    <div class="container">
+            <figure class="section-img">
+                <img src="./food-1.jpeg" alt="">
+            </figure>
+        <div class="section-decription">
+            <h3>Healthy diet</h3>
+            <p>
+            A healthy diet helps to protect against malnutrition in all its forms, as well as noncommunicable diseases (NCDs), including diabetes, heart disease, stroke and cancer.
+            Unhealthy diet and lack of physical activity are leading global risks to health.
+            Healthy dietary practices start early in life – breastfeeding fosters healthy growth and improves cognitive development, and may have longer term health benefits such as reducing the risk of becoming overweight or obese and developing NCDs later in life.
+            </p>
+        </div>
+    </div>
+    <div class="container">
+            <figure class="section-img">
+                <img src="./food-1.jpeg" alt="">
+            </figure>
+        <div class="section-decription">
+            <h3>Healthy diet</h3>
+            <p>
+            A healthy diet helps to protect against malnutrition in all its forms, as well as noncommunicable diseases (NCDs), including diabetes, heart disease, stroke and cancer.
+            Unhealthy diet and lack of physical activity are leading global risks to health.
+            Healthy dietary practices start early in life – breastfeeding fosters healthy growth and improves cognitive development, and may have longer term health benefits such as reducing the risk of becoming overweight or obese and developing NCDs later in life.
+            </p>
+        </div>
+    </div>
   </section>
 </body>
 </html>
